--- a/DYZB/DYZB/Base.lproj/Main.storyboard
+++ b/DYZB/DYZB/Base.lproj/Main.storyboard
@@ -1,24 +1,71 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="aod-Cp-0tx">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Main View Controller-->
+        <scene sceneID="Z42-Qa-JPo">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <tabBarController id="aod-Cp-0tx" customClass="MainViewController" customModule="DYZB" customModuleProvider="target" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="mvf-pK-QE6">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="5ok-Hg-PSy" kind="relationship" relationship="viewControllers" id="5fQ-c1-xFV"/>
+                        <segue destination="7ds-Uk-3qz" kind="relationship" relationship="viewControllers" id="mVP-1t-sVe"/>
+                        <segue destination="Tzb-Uf-K11" kind="relationship" relationship="viewControllers" id="2jX-hJ-e2z"/>
+                        <segue destination="Qlh-hg-ms1" kind="relationship" relationship="viewControllers" id="sBM-Iq-Dal"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fv4-hh-BKu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-859" y="-278"/>
+        </scene>
+        <!--Home-->
+        <scene sceneID="gWM-Hk-SYH">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Home" id="5ok-Hg-PSy" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="CLK-pV-hXw"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="s00-TI-Yfe" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-330" y="-606"/>
+        </scene>
+        <!--Live-->
+        <scene sceneID="3am-0j-NNl">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Live" id="7ds-Uk-3qz" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="mgM-TY-220"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HyE-m4-GAM" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-317" y="-424"/>
+        </scene>
+        <!--Follow-->
+        <scene sceneID="iRV-Qb-qQU">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Follow" id="Tzb-Uf-K11" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="bg5-TX-l1B"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="QXk-CZ-AaC" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-328" y="-190"/>
+        </scene>
+        <!--Profile-->
+        <scene sceneID="aey-FN-p4d">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Profile" id="Qlh-hg-ms1" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="XnI-wd-Twq"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hOV-aJ-kHb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-328" y="-58"/>
         </scene>
     </scenes>
 </document>
